--- a/public/frontEnd/css/custom.css
+++ b/public/frontEnd/css/custom.css
@@ -5,10 +5,15 @@ html {
 body::-webkit-scrollbar {
     width: 15px;
 }
+body {
+    font-family: 'Poppins',Arial,sans-serif !important;
+    /*scrollbar-width: thin;*/
+    /*scrollbar-color: var(--thumbBG) var(--scrollbarBG);*/
+}
 
-/*h1, h2, h3, h4{*/
-/*    font-weight: 700 !important;*/
-/*}*/
+h1, h2, h3, h4{
+    font-weight: 700 !important;
+}
 
 body::-webkit-scrollbar-track {
     background: var(--scrollbarBG);
